Inport legacy code

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Games</h1>
+<a href='haf.html'>Hand and Foot Scorekeeper</a>
+<a href='handandfoot.xls'>Hand and Foot Excel spreadsheet</a>
 </body>
 </html>
