--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <body>
-<h1>Games</h1>
-<a href='haf.html'>Hand and Foot Scorekeeper</a>
-<a href='handandfoot.xls'>Hand and Foot Excel spreadsheet</a>
+    <ul><b>Games:</b>
+        <ul><a href='haf/haf.html'>Hand and Foot Scorekeeper</a></ul>
+        <ul><a href='handandfoot.xls'>Hand and Foot Excel spreadsheet</a></ul>
+    </ul>
 </body>
+
 </html>
