--- a/haf/rules.html
+++ b/haf/rules.html
@@ -32,16 +32,13 @@
     <h3>Keeping Score:</h3>
 
     <ul>
-      <li>Marie's <a target="_blank" href="handandfoot.xls">Excel
-          spreadsheet</a></li>
-
-      <li>Steve's <a target="_blank" href="index.html">JavaScript
-          experiment</a></li>
+      <li>Marie's <a target="_blank" href="handandfoot.xls">Excel spreadsheet</a></li>
+      <li>Steve's <a target="_blank" href=".">Web App</a></li>
     </ul>
 
     <h3>Object of the Game:</h3>
 
-    <p>To win, silly! Do this by being the first person to play out
+    <p>To win, silly! Do this by being the first team to play out
       all their cards without discarding.</p>
 
     <h3>What are things worth:</h3>
