--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <body>
     <ul><b>Games:</b>
-        <ul><a href='haf/haf.html'>Hand and Foot Scorekeeper</a></ul>
-        <ul><a href='handandfoot.xls'>Hand and Foot Excel spreadsheet</a></ul>
+        <ul><a href='haf/'>Hand and Foot Scorekeeper</a></ul>
+        <ul><a href='haf/handandfoot.xls'>Hand and Foot Excel spreadsheet</a></ul>
     </ul>
 </body>
 
